Create a lab notebook

--- a/EcoGenNotes.Rmd
+++ b/EcoGenNotes.Rmd
@@ -1,8 +1,12 @@
 ---
-author: Samantha A. Alger
-date: 23, January 2017
 title: "EcoGenNotes"
-output: html_document
+author: "Samantha A. Alger"
+date: "23, January 2017"
+output:
+  html_document:
+    keep_md: yes
+  pdf_document: 
+    keep_tex: yes
 ---
 
 
@@ -61,3 +65,85 @@ WorkFlow: Extraction to get DNA or RNA, if RNA- change into cDNA, fragment sampl
 Extracted DWN with adaptors and put into a lane. bridge amplification, cluster gen. labeled dNTPs build on and a snap shot is taken everytime one is added. 
 
 "den novo" assembly"- with non-model organism.
+
+##1-25-2017
+###Outline:
+
+1. What are QTNs?
+2. Quantitative genetic theory of adaptive traits?
+  * V~a~
+  * h^2^
+3. Methods
+  * linkage mapping
+  * GWAS
+  * selection scams
+  
+  QTN = "Qunatitative trait nucleotides", most simple SNPS
+  Study of **quantiative traits**- traits that have continuous distributions, traits have a mean and variance. 
+  
+  
+  variance between the two allehels to determine the "average effect"
+  
+  * flowering time- quantitative trait
+  * flower color- Mendelian trait -discrete
+  * thermal tolerance
+  * venom potency
+  * defense compounds
+  * drought tolerance
+  * altitude tolerance (hypoxia)
+  
+  
+  Most populations are at their adaptive peak- because of this, selection on a small mutation might move fitness up or down. selection on a large mutation, would most likely move fitness down- therefore, most of selection occurs on small mutations because large mutations are usually  deleterious. 
+  
+  
+##Seastar wasting disease:  
+  * High morality rate and affects many species. East and West coast.    
+  * What is causing it?-unknown  
+  * In hours or days, a healthy individual with lose legs, innards expload out  
+  * 2012 first account, 2014- really bad, still occuring but less severe. There have been reports of seastar wasting in 1970s.  
+  * Densovirus implicated (Hewsonet al., 2015, PNAS) (SSDNA virus)  
+  * coauthors are not convinced that this is causal pathogen.  
+  * also present in 70 year old museum specimens.  
+  * It could be that something gets out of balance in their normal microbiome and allows the pathogen to make the animal sick.   
+  * Finding that cause of disease is a challenge.  
+  * Field sampling and lab studies  
+  
+##Melanie's experiment:  
+* take biopsy, exracted total RNA, polyA tail to selected mRNA (to get just genes that are coding for proteins), sequenced on hi-illumina, amplified sequences, (get results for microbes on skin, 16S data), photo taken before or after biopsy
+
+##Questions for Seastar wasting:   
+1. What is the role of host microbiota in disease prev?
+2. How does expression of immune related genes differ between the sick vs. health?
+Can understanding something about the immune response tell us something about what type of pathogen we are dealing with? for example: RNAi is used in antiviral defense. 
+
+
+#1/30/17
+
+Targetted approach to see differences in immune related genes over time- as 'infection progressed'. 
+Also look for differences between sick v. healthy individuals. 
+
+H vs. S
+
+Jonathan Rast- reviews on sea urchin immunity. 
+Adaptive/innate immune system: 220 Toll- like reptors
+vs. human (20 receptors) 
+
+Methods:
+Identify genes related to immune response to particular pathogens. Pair with random group of genes to see if there really is upregulation or if it is an artifact. 
+Find groups of sick individuals and look at the dataset associated with when each individuals go from healthy to sick.
+Pair with healthy individuals at the same time points. 
+
+HH: 5
+SS: 5
+HS: 5
+x two time steps
+= 30 data sets
+
+Can we tell anything about the pathogen identity based on expression of immune genes?
+What is the immune response? Is it different between 2 spp. of starfish?
+
+Blast against other infected seastars to be confident that these seastars are infected with Densovirus.
+
+
+  
+  
